--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   background: linear-gradient(135deg, #7a1f1f, #6b4037);
 }
 
-/* ================= PHONE FRAME ================= */
+/* ================= FRAME ================= */
 
 .phone-wrapper {
   width: 100%;
@@ -57,7 +57,6 @@ body {
   height: 100%;
   border-radius: 30px;
   overflow: hidden;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,7 +79,6 @@ body {
 
 .illustration img {
   max-width: 220px;
-  height: auto;
 }
 
 .namaTamu {
@@ -156,9 +154,9 @@ body {
   color: white;
   border-radius: 12px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .btn-calendar {
@@ -186,10 +184,13 @@ body {
   z-index: 20;
 }
 
+.bottom-nav.hidden {
+  display: none;
+}
+
 .nav-item {
   text-align: center;
   color: white;
   font-size: 11px;
   flex: 1;
 }
-
